tests/negative/gold/import_as_test.gold
tests/negative/import_as_test.toit:5:13: error: 'as' must be followed by identifier
import math as
            ^~
Compilation failed.
